--- a/enviroment.yml
+++ b/enviroment.yml
@@ -50,7 +50,7 @@ dependencies:
 
 # external software tools for chemistry
   - conda-forge::coolprop
-  - conda-forge::cantera =2.6
+  - conda-forge::cantera >=2.6
   - conda-forge::mopac
   # see https://github.com/ReactionMechanismGenerator/RMG-Py/pull/2639#issuecomment-2050292972
   - conda-forge::cclib >=1.6.3,<1.9
@@ -97,7 +97,7 @@ dependencies:
 # optional dependencies for using ReactionMechanismSimulator
 # remove the leading '#' to install the required dependencies
 # or simply run `install_rms.sh` which will handle this for you
-  # - conda-forge::pyjuliacall
+  - conda-forge::pyjuliacall
 
 # additional packages that are required, but not specified here (and why)
   # pydqed, pydas, mopac, and likely others require a fortran compiler (specifically gfortran)
